addons/gateway-api-crds/admissionregistration_k8s_io-validatingadmissionpolicybinding-safe-upgrades.gateway.networking.k8s.io.yaml
# Source: gateway-api-crds/charts/gateway-crds-helm/templates/standard-gatewayapi-crds.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  annotations:
    gateway.networking.k8s.io/bundle-version: v1.5.0-dev
    gateway.networking.k8s.io/channel: standard
  name: safe-upgrades.gateway.networking.k8s.io
spec:
  policyName: safe-upgrades.gateway.networking.k8s.io
  validationActions: [Deny]
  matchResources:
    resourceRules:
    - apiGroups:   ["apiextensions.k8s.io"]
      apiVersions: ["v1"]
      resources:   ["customresourcedefinitions"]
      operations:  ["CREATE", "UPDATE"]
